tests/baselines/reference/privateNameClassExpressionLoop.errors.txt
privateNameClassExpressionLoop.ts(3,22): error TS2345: Argument of type 'typeof C' is not assignable to parameter of type 'never'.


==== privateNameClassExpressionLoop.ts (1 errors) ====
    const array = [];
    for (let i = 0; i < 10; ++i) {
        array.push(class C {
                         ~
!!! error TS2345: Argument of type 'typeof C' is not assignable to parameter of type 'never'.
            #myField = "hello";
            #method() {}
            get #accessor() { return 42; }
            set #accessor(val) { }
        });
    }
    